--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    namespace 'org.shadowice.flocke.andotp'
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "org.shadowice.flocke.andotp"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 35
         versionCode 39
         versionName "0.9.0.1"
         vectorDrawables.useSupportLibrary = true
@@ -28,7 +30,7 @@ android {
             }
         }
     }
-    lintOptions {
+    lint {
         abortOnError false
     }
     buildFeatures {
@@ -54,6 +56,14 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10'
+    }
+}
+
 dependencies {
     def lifecycle_version = "2.3.1"
 
@@ -69,13 +79,13 @@ dependencies {
 
     //noinspection GradleDependency - because they messed up their version numbering
     implementation "commons-codec:commons-codec:1.15"
-    implementation "com.github.aakira:expandable-layout:1.6.0"
+    implementation("com.github.aakira:expandable-layout:v1.6.0")
     implementation "com.heinrichreimersoftware:material-intro:2.0.0"
     implementation("com.journeyapps:zxing-android-embedded:4.1.0") { transitive = false }
     implementation('com.google.zxing:core:3.4.1')
     implementation "me.zhanghai.android.materialprogressbar:library:1.6.1"
     implementation "com.github.open-keychain.open-keychain:openpgp-api:v5.7.1"
-    implementation "com.leinardi.android:speed-dial:3.1.1"
+    implementation "com.leinardi.android:speed-dial:3.3.0"
     implementation "com.mikepenz:aboutlibraries:6.2.3" // Supporting a newer version will need some work
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
