Add comprehensive Java and XML linting and formatting
- Add Spotless plugin for code formatting with Google Java Format (AOSP style)
- Configure Java formatting: remove unused imports, trailing whitespace, consistent indentation
- Configure XML formatting: whitespace cleanup and consistent indentation
- Add basic formatting for misc files (.gradle, .md, .gitignore)
- Add Checkstyle linter with comprehensive rule set based on Google Java Style
- Create Makefile targets: format, format-check, checkstyle, updated check target
- Update CONTRIBUTING.md with code quality workflow documentation
- Generated HTML reports for violations tracking

Tools can handle existing codebase violations gracefully:
- Spotless found 70 files with formatting issues
- Checkstyle found 2,165 warnings across 67 files
- Both tools ready for incremental improvement and CI integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'com.diffplug.spotless' version '6.25.0'
+    id 'checkstyle'
 }
 
 android {
@@ -90,4 +92,46 @@ dependencies {
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+}
+
+// Code formatting and linting configuration
+spotless {
+    java {
+        target 'src/**/*.java'
+        googleJavaFormat('1.17.0').aosp().reflowLongStrings()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
+        indentWithSpaces(4)
+    }
+    
+    format 'xml', {
+        target 'src/**/*.xml'
+        trimTrailingWhitespace()
+        indentWithSpaces(4)
+        endWithNewline()
+    }
+    
+    format 'misc', {
+        target '*.gradle', '*.md', '.gitignore'
+        trimTrailingWhitespace()
+        indentWithSpaces(2)
+        endWithNewline()
+    }
+}
+
+// Checkstyle configuration
+checkstyle {
+    toolVersion = '10.12.4'
+    configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
+}
+
+tasks.register('checkstyleMain', Checkstyle) {
+    source 'src/main/java'
+    include '**/*.java'
+    classpath = files()
+    reports {
+        xml.required = true
+        html.required = true
+    }
 }
