--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04, ubuntu-24.04-arm, macos-latest]
+        os: [ubuntu-latest, ubuntu-24.04, macos-latest]
         java-version: [17, 21]
       fail-fast: false
 
